Bootstrap theme and styles changes

--- a/web/themes/custom/orchard_bootstrap/css/style.css
+++ b/web/themes/custom/orchard_bootstrap/css/style.css
@@ -2,3 +2,10 @@
  * @file
  * Subtheme specific CSS.
  */
+#banner {
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  transition: background-image 0.5s ease-in-out;
+  margin: 1% 0%;
+}
