--- a/web/themes/custom/orchard_bootstrap/templates/page.html.twig
+++ b/web/themes/custom/orchard_bootstrap/templates/page.html.twig
@@ -122,6 +122,9 @@
               <main{{ content_attributes }}>
                 <section class="section">
                   <a href="#main-content" id="main-content" tabindex="-1"></a>
+									{% if page.primary_menu.orchard_bootstrap_bannernavigation %}
+										<div id="banner" style="height: 400px;" class="mx-auto"></div>
+									{% endif %}
                   {{ page.content }}
                 </section>
               </main>
